fix: too much fixes(adaptive, javascript-task)

--- a/css/style.css
+++ b/css/style.css
@@ -511,6 +511,10 @@
 }
 
 .portoflio-section__list-item:hover {
+    text-decoration: underline;
+}
+
+.portoflio-section__list-item--active {
     color: #c5c5c5;
     border-color: #c5c5c5;
 }
@@ -540,6 +544,8 @@
 }
 
 .image-list__image {
+    z-index: -5;
+
     cursor: pointer;
     transition: 0.1s;
     -webkit-transition: 0.1s;
@@ -549,8 +555,8 @@
 }
 
 .image-list__image--border {
+    z-index: 5;
     outline: 5px solid #F06C64;
-
 }
 
 .image-list__list-item:nth-child(4n) {
@@ -986,13 +992,17 @@
         left: 40px;
     }
 
+    .slider-section__slider-left,
+    .slider-section__slider-right {
+        top: -250px;
+    }
+
     .info-section__list-item {
         margin: 0;
         margin-bottom: 50px;
     }
 
     .info-section__list-item:nth-child(2n+1) {
-
         margin-right: auto;
     }
 
@@ -1029,5 +1039,309 @@
 }
 
 @media (max-width: 767.999px) {
-    .wrapper {}
+    .wrapper {
+        max-width: 700px;
+        width: 100%;
+    }
+
+    .header-container {
+        max-width: 700px;
+        width: 100%;
+
+        padding: 0;
+    }
+
+    .header__logo {
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    /*burger-button start*/
+    .header-container__burger-menu {
+        height: 20px;
+        width: 25px;
+        position: absolute;
+        top: 36px;
+        left: 20px;
+        cursor: pointer;
+
+        z-index: 5;
+    }
+
+    .burger-button,
+    .burger-button:after,
+    .burger-button:before {
+        content: '';
+        position: absolute;
+        width: 25px;
+        height: 3px;
+        background-color: white;
+        border-radius: 5px;
+        -webkit-border-radius: 5px;
+        -moz-border-radius: 5px;
+        -ms-border-radius: 5px;
+        -o-border-radius: 5px;
+    }
+
+    .burger-button:after {
+        top: 14px;
+    }
+
+    .burger-button:before {
+        top: 7px;
+    }
+
+    /*burger button end*/
+
+
+    .nav {
+        margin: 0;
+        padding: 0;
+        position: fixed;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 70%;
+
+        background: #2D303A;
+        align-items: center;
+    }
+
+    /*.nav::after {
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.4);
+        z-index: -5;
+
+    }*/
+
+    .nav__list {
+        font-size: 24px;
+        line-height: 29px;
+
+        margin: 0 auto;
+        padding-left: 20px;
+        flex-direction: column;
+        justify-content: space-between;
+        height: 249px;
+        width: 205px;
+    }
+
+    .nav__list-item:after {
+        display: none;
+    }
+
+    /*js active-classes*/
+    .header__logo--burger-active {
+        margin-left: 71px;
+        z-index: 5;
+    }
+
+    .header-container__burger-menu--active {
+        transform: rotate(90deg);
+        -webkit-transform: rotate(90deg);
+        -moz-transform: rotate(90deg);
+        -ms-transform: rotate(90deg);
+        -o-transform: rotate(90deg);
+    }
+
+    .nav--hiden {
+        display: none;
+    }
+
+    /*js-active classes end*/
+
+    .slider-section__wrapper {
+        width: 400px;
+    }
+
+    .slider-section__test-wrapper {
+        width: 100%;
+    }
+
+    .slider-section__slider-item {
+        height: 288px;
+    }
+
+    .slider-section__image-one {
+        width: 115px;
+        height: 240px;
+        top: 30px;
+        left: 25px;
+    }
+
+    .slider-section__image-two {
+        width: 240px;
+        height: 115px;
+        top: 94px;
+        left: 160px;
+    }
+
+    .black-vertical {
+        width: 91px;
+        height: 160px;
+        top: 31px;
+        left: 6px;
+    }
+
+    .black-horizontal {
+        width: 160px;
+        height: 91px;
+        top: 6px;
+        left: 29px;
+    }
+
+    .slider-section__image-one--second-slide {
+        width: 210px;
+        height: 240px;
+        left: 100px;
+        top: 55px;
+    }
+
+    .slider-section__slider-left,
+    .slider-section__slider-right {
+        top: -140px;
+    }
+
+    .slider-section__slider-left {
+        left: 4%;
+    }
+
+    .slider-section__slider-right {
+        right: 4%;
+    }
+
+    .slider-section__image-one--second-slide {
+        width: 210px;
+        height: 240px;
+        left: 110px;
+        top: 55px;
+    }
+
+    .info-section__list {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .info-section__list-item {
+        margin: 0;
+        margin-bottom: 35px;
+    }
+
+    .portoflio-section__image-list {
+        width: 91%;
+        margin: 0 auto;
+    }
+
+    .portoflio-section__image-list .image-list__list-item {
+        margin: 0px;
+        margin-right: auto;
+        margin-bottom: 20px;
+    }
+
+    .portoflio-section__image-list .image-list__list-item:nth-child(2n) {
+        margin-right: 0;
+    }
+
+    .images-container__list {
+        flex-direction: column;
+        width: 300px;
+        margin: 0 auto;
+    }
+
+    .images-container__list-item {
+        margin-bottom: 20px;
+    }
+
+    .form-article__form-container {
+        display: block;
+    }
+
+    .main-form__text-input {
+        width: 100%;
+    }
+
+    .main-form__button {
+        width: 100%;
+        text-align: center;
+    }
+
+
+    @media (max-width: 550px) {
+        .wrapper {
+            width: 100%;
+        }
+
+        .slider-section__slider-item {
+            height: 238px;
+        }
+
+        .slider-section__image-one {
+            width: 95px;
+            height: 220px;
+            top: 30px;
+            left: 35px;
+
+
+        }
+
+        .slider-section__image-two {
+            width: 220px;
+            height: 95px;
+            top: 74px;
+            left: 160px;
+        }
+
+        .black-vertical {
+            width: 75px;
+            top: 25px;
+            left: 5px;
+            height: 133px;
+        }
+
+        .black-horizontal {
+            width: 133px;
+            top: 5px;
+            left: 23px;
+            height: 75px;
+        }
+
+        .slider-section__image-one--second-slide {
+            top: 30px;
+            left: 30%;
+            width: 190px;
+            height: 220px;
+        }
+
+        .portoflio-section__image-list {
+            width: 84%;
+        }
+
+        .portoflio-section__image-list .image-list__list-item {
+            width: 45%;
+            margin-right: 13px; 
+        }
+
+        .image-list__image {
+            width: 100%;
+            height: 100%;
+        }
+
+        .images-container__list {
+            width: 80%;
+            margin: 0 auto;
+        }
+
+        .images-container__list-item {
+            width: 100%;
+            max-width: 300px;
+            margin: 0 auto 20px;
+        }
+
+        .images-container__image {
+            width: 100%;
+        }
+    }
 }
